--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ Imports:
     stringr,
     parallel,
     ChannelAttribution,
-    lubridate
+    lubridate,
+    knitr,
+    kableExtra
 Depends:
     dplyr,
     readr,
@@ -24,7 +26,9 @@ Depends:
     stringr,
     parallel,
     ChannelAttribution,
-    lubridate
+    lubridate,    
+    knitr,
+    kableExtra
 Suggests:
     dplyr,
     readr,
@@ -32,4 +36,6 @@ Suggests:
     stringr,
     parallel,
     ChannelAttribution,
-    lubridate
+    lubridate,
+    knitr,
+    kableExtra
